# qa4sm-api

./: .coveragerc  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py  todo
docs/: conf.py  index.rst
src/qa4sm_api/: __init__.py  cli.py  client_api.py  extent.py  globals.py  old.py  skeleton.py
src/qa4sm_api/pipelines/: compile_report.py  trigger_runs.py
src/qa4sm_api/pipelines/configs/smos_l2_v700/: 01-SmosL2-vs-C3sComb-abs.json  02-SmosL2-vs-Era5Land-abs.json  check_files.py  settings.yml
src/qa4sm_api/pipelines/configs/smos_l2_v700/latex_template/: template_into.tex
src/qa4sm_api/pipelines/configs/smos_l2_v700/latex_template/src/: main.tex  run.tex
src/qa4sm_api/report/: content.py  data.py  questions  run.py  tracking_plot.py  utils.py
tests/: conftest.py  test_client_api.py  test_content.py  test_extent.py  test_globals.py  test_report_run.py  test_skeleton.py  test_utils.py
tests/test_pdf_report/: test_compile_pdf.py
tests/test_pdf_report/template/: datasets.tex  main.tex  references.bib
